fixed zoom-in bug on zipcode entry on mobile

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -25,7 +25,13 @@
   max-width: 60rem;
   outline: none;
   padding: $xl-size;
-  text-align: center;
+  text-align: center;  
+
+  input[type='text'],
+  input[type='number'],
+  textarea {
+    font-size: 1.6rem;
+  }
 }
 
 .modal__title {
